FPET-967: mutation testing fix 1